// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDialog enables to override button labels 1`] = `
<Dialog
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  buttons={
    Array [
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn-cancel"
        disabled={false}
        onClick={[Function]}
      >
        Custom cancel
      </Button>,
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Custom confirm
      </Button>,
    ]
  }
  cancelLabel="Ok"
  disabled={false}
  message="Proceed with this action?"
  onCancel={[Function]}
  show={true}
  title="Please Confirm"
/>
`;

exports[`ConfirmDialog enables to set inner html 1`] = `
<Dialog
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  buttons={
    Array [
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn-cancel"
        disabled={false}
        onClick={[Function]}
      >
        Cancel
      </Button>,
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Save
      </Button>,
    ]
  }
  cancelLabel="Ok"
  dangerouslySetInnerHTML={
    Object {
      "_html": "<b>Custom</b> html content",
    }
  }
  disabled={false}
  onCancel={[Function]}
  show={true}
  title="Please Confirm"
/>
`;

exports[`ConfirmDialog renders a confirm dialog 1`] = `
<Dialog
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  buttons={
    Array [
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn-cancel"
        disabled={false}
        onClick={[Function]}
      >
        Cancel
      </Button>,
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Save
      </Button>,
    ]
  }
  cancelLabel="Ok"
  disabled={false}
  message="Proceed with this action?"
  onCancel={[Function]}
  show={true}
  title="Please Confirm"
/>
`;
